--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,8 +8,8 @@ def shared_pods
 end
 
 def testing_pods
-  pod 'Quick', '1.3.2'
-  pod 'Nimble', '7.3.1' 
+  pod 'Quick', '~> 3.0'
+  pod 'Nimble', '~> 8.0' 
 end
 
 target 'Example' do
